workloads/wkd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wkd
  namespace: stalwart
  labels:
    app: wkd
spec:
  type: ClusterIP
  selector:
    app: wkd
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
